[package]
name = "tokio_runtime"
version = "0.1.0"
authors = ["teng <wwwsousoucom@126.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.13", features = ["full"] }
tokio-util = { version = "0.3.1", features = ["codec"] }
futures = "0.3"